# Yara

./: .env.development  .env.production  .env.staging  .gitignore  AGENTS.md  PROJECT-PLAN.md  README.md  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  reset-db.sh  start.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  dev_cli.py  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: reset_demo_db.sh  reset_dev_db.sh  reset_empty_db.sh  seed_demo_project.py
backend/tests/: conftest.py  natural_input_helpers.py  test_auth_project_ownership.py  test_correction_void_flow.py  test_domain_fallback_policy.py  test_domain_router.py  test_entity_resolution.py  test_execution_engine_shadow_mode.py  test_feedback_intelligence_service.py  test_financial_accounting.py  test_financial_concurrency_atomicity.py  test_financial_migration_gate.py  test_financial_migration_status.py  test_financial_misclassification_guard.py  test_health.py  test_input_normalizer.py  test_interpretation_feedback.py  test_llm_authority_controller.py  test_llm_classification_contract.py  test_llm_v2_architecture_audit.py  test_llm_v2_first.py  test_llm_v2_interpreter_ollama.py  test_llm_v2_multi_event.py  test_natural_input_idempotency.py  test_natural_input_jobs.py  test_observability_concurrency.py  test_observability_e2e.py  test_observability_validator.py  test_persian_role_extractor.py  test_phase1_core.py  test_phase4_architecture_validation.py  test_plan_guard.py  (+20 more)
(+217 files in other folders)
