[project]
name = "yara-backend"
version = "0.1.0"
description = "Backend foundation for Yara"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "fastapi[standard]>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[project.scripts]
yara = "dev_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "dev_tools*"]
exclude = ["alembic*", "tests*"]

[tool.setuptools]
py-modules = ["dev_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
